2008-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/python.c: Fix parsing bug when there is text after the
                        end of a multi line comment (closes #1894084).
 * src/socket.c: Apply patch from Daniel Richard G. to update some
                 source code comments (thanks).


2008-02-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.h: Fix broken compilation with GTK < 2.10.
 * src/document.c, src/encodings.c, src/treeviews.c, src/vte.c:
   Fix some compiler warnings.


2008-02-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/search.c, src/ui_utils.c:
   Allow using Find In Files dialog even if no files are open
   (closes #1891818).
 * src/main.c, src/socket.c:
   Allow start of Geany with given files on the command line but
   whithout a writable temporary directory and without a writable
   configuration directory.
   Improve filename of created symlink to the socket file.
 * src/document.c: Don't force unique line ending characters when saving
                   files to avoid unexpected saving behaviour.
 * src/keybindings.c, src/keybindings.h, src/prefs.c:
   Use a modifiers mask to ignore unwanted modifiers(caps lock,
   num lock) when handling key presses (maybe fixes #1891276).
 * src/dialogs.c:
   Fix compiler warnings.
   Improve Save As dialog usability problems.


2008-02-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/about.c, THANKS: Added Nikita E. Shalaev to list of
   Russian translaters.


2008-02-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/navqueue.c, src/navqueue.h, src/symbols.c, src/treeviews.c:
   Apply patch from Yura Siamashka to fix wrong navigation queue items
   (thanks).
 * src/editor.c:
   Add workaround for a Scintilla bug in HTML/PHP lexer which styles the
   last line of document wrong when in PHP mode.
 * README.Packagers: Add some notes for package maintainers.
 * src/socket.c: