@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
+<meta name="generator" content="Docutils 0.4.1: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
 <meta name="date" content="2008-02-04" />
@@ -135,7 +135,7 @@ dt {
 <tr><th class="docinfo-name">Date:</th>
 <td>2008-02-04</td></tr>
 <tr><th class="docinfo-name">Version:</th>
-<td>0.13</td></tr>
+<td>0.14</td></tr>
 </tbody>
 </table>
 <p>Copyright © 2005-2008</p>
@@ -2635,7 +2635,7 @@ gpl</td>
 </tr>
 <tr><td>geanyversion</td>
 <td>The actual Geany version, e.g.
-&quot;Geany 0.13&quot;.</td>
+&quot;Geany 0.14&quot;.</td>
 <td>filetypes, file header, function
 description, ChangeLog entry, bsd,
 gpl</td>
@@ -2686,7 +2686,7 @@ editing the file, to build the HTML document to see how your changes
 look, run &quot;<tt class="docutils literal"><span class="pre">make</span> <span class="pre">doc</span></tt>&quot; in the subdirectory <tt class="docutils literal"><span class="pre">doc</span></tt> of Geany's source
 directory. This regenerates the <tt class="docutils literal"><span class="pre">geany.html</span></tt> file. To generate a PDF
 file, use the command &quot;<tt class="docutils literal"><span class="pre">make</span> <span class="pre">pdf</span></tt>&quot; which should generate a file called
-geany-0.13.pdf.</p>
+geany-0.14.pdf.</p>
 <p>After you are happy with your changes, create a patch:</p>
 <pre class="literal-block">
 % svn diff geany.txt &gt; foo.patch
@@ -2855,6 +2855,10 @@ commands</a>).</td>
 <tr><td>auto_complete_whilst_editing</td>
 <td>Whether to allow autocompletion when editing
 an existing line.</td>
+<td>false</td>
+</tr>
+<tr><td>scroll_stop_at_last_line</td>
+<td>Disable scrolling past end of document</td>
 <td>false</td>
 </tr>
 <tr><td><strong>[interface]</strong></td>
@@ -3386,7 +3390,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2008-02-04 13:23 UTC.
+Generated on: 2008-02-15 16:25 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
