@@ -422,7 +422,8 @@ static gint document_create_new_sci(const gchar *filename)
 	sci_set_caret_policy_x(sci, CARET_JUMPS | CARET_EVEN, 0);
 	//sci_set_caret_policy_y(sci, CARET_JUMPS | CARET_EVEN, 0);
 	SSM(sci, SCI_AUTOCSETSEPARATOR, '\n', 0);
-	SSM(sci, SCI_SETENDATLASTLINE, FALSE, 0);	// allow scrolling past end of document
+	// (dis)allow scrolling past end of document
+	SSM(sci, SCI_SETENDATLASTLINE, editor_prefs.scroll_stop_at_last_line, 0);
 
 	// signal for insert-key(works without too, but to update the right status bar)
 	//g_signal_connect((GtkWidget*) sci, "key-press-event",
